# FunnyCuda

./: .gitignore  CMakeLists.txt  README.md
src/: cuda_test.cu
